--- a/appspec.yml
+++ b/appspec.yml
@@ -3,16 +3,17 @@ os: linux
 files:
   - source: /
     destination: /home/ec2-user/nest_ec2_actions
+    overwrite: yes
 hooks:
   BeforeInstall:
     - location: scripts/before_install.sh
-      timeout: 300000
+      timeout: 30000
       runas: ec2-user
   AfterInstall:
     - location: scripts/before_install.sh
-      timeout: 300000
+      timeout: 30000
       runas: ec2-user
   ApplicationStart:
     - location: scripts/application_start.sh
-      timeout: 300000
+      timeout: 30000
       runas: ec2-user
