--- a/appspec.yml
+++ b/appspec.yml
@@ -13,7 +13,7 @@ hooks:
     - location: scripts/after_install.sh
       timeout: 800
       runas: ec2-user
-  ApplicationStart:
-    - location: scripts/application_start.sh
-      timeout: 500
-      runas: ec2-user
+  # ApplicationStart:
+  #   - location: scripts/application_start.sh
+  #     timeout: 500
+  #     runas: ec2-user
